--- a/css/master.css
+++ b/css/master.css
@@ -12,3 +12,44 @@ body {
   margin: auto;
   overflow: hidden;
 }
+
+.active {
+  font-weight: bold;
+}
+
+/* Header */
+
+header {
+  padding: 10px;
+  background-color: #6E438D;
+}
+
+header img {
+  height: 60px;
+  width: auto;
+  float: left;
+}
+
+header nav {
+  float: right;
+  margin-top: 20px;
+}
+
+header nav a {
+  float: left;
+  padding: 10px;
+  margin-top: -10px;
+  margin-left: 10px;
+  text-decoration: none;
+  color: #FFFFFF;
+}
+
+header nav a:hover {
+  background-color: #8C4DBA;
+}
+
+/* Media queries */
+
+@media (max-width: 768px) {
+  
+}
