--- a/css/master.css
+++ b/css/master.css
@@ -39,7 +39,8 @@ header nav a {
   float: left;
   padding: 10px;
   margin-top: -10px;
-  margin-left: 10px;
+  margin-left: 5px;
+  margin-right: 5px;
   text-decoration: none;
   color: #FFFFFF;
 }
@@ -51,5 +52,14 @@ header nav a:hover {
 /* Media queries */
 
 @media (max-width: 768px) {
-  
+  header img {
+    float: none;
+  }
+  header nav {
+    float: none;
+    margin-top: 10px;
+  }
+  header nav a {
+    float: none;
+  }
 }
