--- a/css/master.css
+++ b/css/master.css
@@ -81,6 +81,7 @@ header nav a:hover {
 }
 
 .box h1 {
+  font-size: 20px;
   margin: 5px;
 }
 
@@ -94,15 +95,16 @@ header nav a:hover {
   font-size: 18px;
 }
 
-/* Blog */
+/* Landing */
 
-#blog {
-  height: 615px;
+#landing .box {
+  float: left;
 }
 
-#blog object{
-  width: 100%;
-  height: 100%;
+#landing div #intro {
+  display: flow-root;
+  padding-left: 10px;
+  text-align: justify;
 }
 
 /* Media queries */
@@ -116,6 +118,24 @@ header nav a:hover {
     margin-top: 10px;
   }
   header nav a {
+    display: inline-block;
     float: none;
+  }
+  #landing {
+    text-align: center;
+    float: none;
+  }
+  .box {
+    width: 100%;
+    padding: 7px 0px 7px 0px;
+    text-align: center;
+  }
+  .box img {
+    width: 70%;
+    height: auto;
+  }
+  .box p {
+    margin: 5px;
+    font-size: 18px;
   }
 }
