--- a/css/master.css
+++ b/css/master.css
@@ -1,5 +1,8 @@
+/* Global */
+
 body {
-  font-family: Ubuntu, Arial, Helvetica, sans-serif;
+  background: #e8d7e6;
+  font-family: 'Ubuntu', Arial, Helvetica, sans-serif;
   font-size: 15px;
   line-height: 1.5;
   padding: 0;
@@ -15,6 +18,10 @@ body {
 
 .active {
   font-weight: bold;
+}
+
+a {
+  text-decoration: none;
 }
 
 /* Header */
@@ -43,6 +50,11 @@ header nav a {
   margin-right: 5px;
   text-decoration: none;
   color: #FFFFFF;
+  transition: background-color 0.2s cubic-bezier(.17,.84,.44,1);
+}
+
+header nav a:visited {
+  color: #fff;
 }
 
 header nav a:hover {
@@ -71,40 +83,154 @@ header nav a:hover {
   cursor: pointer;
 }
 
-/* Box */
+/* Box Small */
 
-.box {
-  margin-top: 10px;
-  padding: 7px 10px 7px 10px;
-  background-color: #DBBFD8;
-  width: 30%;
+.box-small {
+  display: inline-block;
+  margin: 10px 5px 0px 5px;
+  padding: 7px 10px;
+  width: 20%;
+  color: #000;
+  transition: background-color 0.2s cubic-bezier(.17,.84,.44,1);
 }
 
-.box h1 {
-  font-size: 20px;
-  margin: 5px;
+.box-small:hover {
+  background: #b797b3;
 }
 
-.box img {
-  width: 100%;
+.box-small h1 {
+  text-align: center;
+  font-size: 25px;
+  margin: 0px;
+}
+
+.box-small img {
+  width: 195px;
   height: auto;
-}
-
-.box p {
-  margin: 5px;
-  font-size: 18px;
 }
 
 /* Landing */
 
-#landing .box {
-  float: left;
+#landing {
+  padding-bottom: 10px;
 }
 
 #landing div #intro {
+  text-align: center;
+}
+
+/* Cont Boxes */
+
+#intro {
   display: flow-root;
-  padding-left: 10px;
-  text-align: justify;
+}
+
+/* Featured */
+
+#featured {
+  background: #b797b3;
+  padding-bottom: 30px;
+}
+
+#featured h1 {
+  margin: none;
+  text-align: center;
+}
+
+/* Grid */
+
+.grid {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
+  padding-bottom: 10px;
+}
+
+/* Grid Item */
+
+.grid-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.grid-item img {
+  margin: 10px;
+  height: 10em;
+  width: auto;
+  float: left;
+}
+
+.grid-item .info {
+  margin: 10px;
+}
+
+/* Footer */
+
+footer {
+  background: #6E438D;
+}
+
+footer p, footer p a {
+  color: #fff;
+}
+
+footer a:hover {
+  font-weight: bold;
+}
+
+/* Projects Section */
+
+.projects-section img {
+  display: inline;
+  height: 5em;
+  margin: 5px;
+}
+
+.projects-section h1 {
+  display: inline;
+  margin: 5px;
+}
+
+/* Projects Header */
+
+.projects-header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+/* Jogos */
+
+#jogos {
+  background-color: #a5bfdb;
+}
+
+#jogos .grid-item {
+  background-color: #567699;
+  color: #fff;
+  transition: background-color 0.2s cubic-bezier(.17,.84,.44,1);
+}
+
+#jogos .grid-item:hover {
+  background-color: #6595ca;
+}
+
+/* Proj Header */
+
+.proj-header h1 {
+  font-size: 30px;
+}
+
+/* Browser Game */
+
+.browser-game .warning {
+  margin: 0px 0px 10px 0px;
+  background-color: #ffeca4;
+  padding: 5px;
 }
 
 /* Media queries */
@@ -125,17 +251,31 @@ header nav a:hover {
     text-align: center;
     float: none;
   }
-  .box {
+  #landing #im-special {
+    padding-left: 0;
+  }
+  #intro {
+    float: none;
+    display: block;
+  }
+  .box-small {
+    display: flex;
+    align-items: center;
     width: 100%;
-    padding: 7px 0px 7px 0px;
-    text-align: center;
+    margin: 0px;
+    padding: 0px;
+    margin-bottom: 10px;
   }
-  .box img {
-    width: 70%;
-    height: auto;
+  .box-small img {
+    width: 20%;
+    display: inline-block;
+    margin: 5px 10px 5px;
   }
-  .box p {
-    margin: 5px;
-    font-size: 18px;
+  .box-small h1 {
+    display: inline-block;
+    margin: auto;
+  }
+  .grid {
+    grid-template-columns: auto !important;
   }
 }
