--- a/css/projects.css
+++ b/css/projects.css
@@ -57,3 +57,18 @@
 #apps .grid-item:hover {
     background-color: #e6bca3;
 }
+
+/* Anim */
+  
+#anim {
+    background-color: #e6b049;
+}
+  
+#anim .grid-item {
+    background-color: #df922f;
+    color: #000;
+}
+  
+#anim .grid-item:hover {
+    background-color: #eace61;
+}
