--- a/css/master.css
+++ b/css/master.css
@@ -24,6 +24,10 @@ a {
   text-decoration: none;
 }
 
+article a {
+  text-decoration: underline;
+}
+
 /* Header */
 
 header {
@@ -275,6 +279,12 @@ article a {
 
 #MDPgrid .grid-item img {
   margin: 0px;
+}
+
+/* Audio */
+
+audio {
+  width: 100%;
 }
 
 /* Media queries */
