--- a/css/escuro.css
+++ b/css/escuro.css
@@ -1,9 +1,3 @@
-/*
-O sistema de temas usa !important pra sobrescrever os temas customizados das páginas de projetos.
-Eu sei que é má prática mas eu não ligo.
-Só eu vou atualizar esse site mesmo.
-*/
-
 /* Global */
 
 body {
@@ -11,6 +5,10 @@ body {
 }
 
 h1 {
+  color: #fff;
+}
+
+p {
   color: #fff;
 }
 
